RecommendedFee, HighestFee set visible on transfer form, fees sorted, warning for lower fees, fixes #241

--- a/src/views/pages/dashboard/invoice/DashboardInvoicePage.less
+++ b/src/views/pages/dashboard/invoice/DashboardInvoicePage.less
@@ -104,5 +104,9 @@
                 background-color: @primary;
             }
         }
+
+        /deep/.transaction-uri-display-row {
+            margin-top: 0.5rem;
+        }
     }
 }
